# nicode-claw

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  skills-lock.json
docs/superpowers/plans/: 2026-04-05-layered-restructure.md  2026-04-05-reflection-loop.md
docs/superpowers/specs/: 2026-04-05-layered-restructure-design.md  2026-04-05-reflection-loop-design.md
src/nicode_claw/: __init__.py  __main__.py  config.py  context.py  follow_up.py  formatting.py  install_tools.py  main.py  reflection.py  scheduler.py
src/nicode_claw/agent/: agent.py  factory.py  processing.py
src/nicode_claw/bot/: handlers.py  media.py  reply.py  telegram_tools.py
src/nicode_claw/core/: config.py  context.py  formatting.py
src/nicode_claw/services/: reflection.py  scheduler.py
src/nicode_claw/storage/: intents.py  jobs.py
src/nicode_claw/tools/: follow_up.py  scheduler.py
tests/: test_agent.py  test_config.py  test_handlers.py  test_media.py
